apps/vaultwarden/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/component: vaultwarden
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/component: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/component: vaultwarden
    spec:
      automountServiceAccountToken: false
      containers:
      - envFrom:
        - configMapRef:
            name: vaultwarden
        - secretRef:
            name: vaultwarden
        image: docker.io/vaultwarden/server
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /alive
            port: http-alt
          periodSeconds: 30
          timeoutSeconds: 5
        name: vaultwarden
        ports:
        - containerPort: 8080
          name: http-alt
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /alive
            port: http-alt
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /alive
            port: http-alt
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 3
        volumeMounts:
        - mountPath: /data
          name: vaultwarden
        - mountPath: /tmp
          name: tmp
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: vaultwarden
      volumes:
      - name: vaultwarden
        persistentVolumeClaim:
          claimName: vaultwarden
      - emptyDir: {}
        name: tmp
