apps/vaultwarden/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/component: vaultwarden
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  ports:
  - name: vaultwarden
    protocol: TCP
    port: 8080
    targetPort: http-alt
    appProtocol: kubernetes.io/ws
