apps/vaultwarden/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/component: vaultwarden
spec:
  hostnames:
  - wallet.guedescloud.com.br
  parentRefs:
  - name: cilium-gateway-system
    namespace: kube-system
    port: 443
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
